--- a/План задач.md
+++ b/План задач.md
@@ -25,17 +25,17 @@
 
 ## Этап 1 — Доменная модель и API
 - [ ] Pydantic-схемы: `Order`, `ProductConfig`, `Panel`, `BOM`, `HardwareItem`, `Supplier`, `DXFJob`, `GCodeJob`, `Artifact`, `AuditLog`, `Validation`, `ValidationItem`
-- [ ] FastAPI каркас `api/` и REST v1 контракты (заглушки)
+- [x] FastAPI каркас `api/` и REST v1 контракты (заглушки)
   - [x] Базовый `api/main.py` и `/health`
-  - [ ] POST `/api/v1/spec/extract`
-  - [ ] POST `/api/v1/hardware/select`
-  - [ ] POST `/api/v1/cam/dxf`
-  - [ ] POST `/api/v1/cam/gcode`
-  - [ ] POST `/api/v1/spec/validate`
-  - [ ] POST `/api/v1/validation/approve`
-  - [ ] POST `/api/v1/integrations/1c/export`
-- [ ] OpenAPI (Swagger) доступен и актуален
-- [ ] Диаграммы состояний CAM (docs) — Created → Processing → Completed/Failed
+  - [x] POST `/api/v1/spec/extract`
+  - [x] POST `/api/v1/hardware/select`
+  - [x] POST `/api/v1/cam/dxf`
+  - [x] POST `/api/v1/cam/gcode`
+  - [x] POST `/api/v1/spec/validate`
+  - [x] POST `/api/v1/validation/approve`
+  - [x] POST `/api/v1/integrations/1c/export`
+- [x] OpenAPI (Swagger) доступен и актуален
+ - [ ] Диаграммы состояний CAM (docs) — Created → Processing → Completed/Failed
 
 ## Этап 2 — Хранилище и инфраструктура
 - [ ] PostgreSQL 16: миграции (Alembic) для всех сущностей
