feat(domain): доменные Pydantic-схемы; docs: CAM состояния

--- a/План задач.md
+++ b/План задач.md
@@ -24,7 +24,7 @@
   - [x] `docs/architecture.md`
 
 ## Этап 1 — Доменная модель и API
-- [ ] Pydantic-схемы: `Order`, `ProductConfig`, `Panel`, `BOM`, `HardwareItem`, `Supplier`, `DXFJob`, `GCodeJob`, `Artifact`, `AuditLog`, `Validation`, `ValidationItem`
+- [x] Pydantic-схемы: `Order`, `ProductConfig`, `Panel`, `BOM`, `HardwareItem`, `Supplier`, `DXFJob`, `GCodeJob`, `Artifact`, `AuditLog`, `Validation`, `ValidationItem`
 - [x] FastAPI каркас `api/` и REST v1 контракты (заглушки)
   - [x] Базовый `api/main.py` и `/health`
   - [x] POST `/api/v1/spec/extract`
@@ -35,7 +35,7 @@
   - [x] POST `/api/v1/validation/approve`
   - [x] POST `/api/v1/integrations/1c/export`
 - [x] OpenAPI (Swagger) доступен и актуален
- - [ ] Диаграммы состояний CAM (docs) — Created → Processing → Completed/Failed
+ - [x] Диаграммы состояний CAM (docs) — Created → Processing → Completed/Failed
 
 ## Этап 2 — Хранилище и инфраструктура
 - [ ] PostgreSQL 16: миграции (Alembic) для всех сущностей
