chore(vscode): set .venv interpreter; feat(docker): API Dockerfile + compose service; fix(storage): cleanup import; docs(api): docker run

--- a/План задач.md
+++ b/План задач.md
@@ -38,12 +38,13 @@
  - [x] Диаграммы состояний CAM (docs) — Created → Processing → Completed/Failed
 
 ## Этап 2 — Хранилище и инфраструктура
-- [ ] PostgreSQL 16: миграции (Alembic) для всех сущностей
-- [ ] Redis 7.2: настройка очередей задач (CAM), DLQ
-- [ ] Object Storage: слой абстракции для presigned URL (YC)
+- [~] PostgreSQL 16: миграции (Alembic) для всех сущностей
+- [~] Redis 7.2: настройка очередей задач (CAM), DLQ
+- [~] Object Storage: слой абстракции для presigned URL (YC)
 - [ ] Локальная разработка (опционально)
   - [x] docker-compose: `postgres`, `redis`, (опц.) `minio` для S3-совместимости
 - [ ] Секреты/конфиги через env (без ПДн и ключей в репозитории)
+  - [x] `.env.example` добавлен
 
 ## Этап 3 — Интеграция ИИ (текст и OCR)
 - [ ] Клиенты с ретраями/таймаутами/логами
