feat(embeddings): pgvector vector(256)+IVFFLAT, alembic 0004/0005; fix 0003 Pylance; add YC embeddings client + backfill script; compose/db/image updates

--- a/План задач.md
+++ b/План задач.md
@@ -38,24 +38,30 @@
  - [x] Диаграммы состояний CAM (docs) — Created → Processing → Completed/Failed
 
 ## Этап 2 — Хранилище и инфраструктура
-- [~] PostgreSQL 16: миграции (Alembic) для всех сущностей
+- [x] PostgreSQL 16: миграции (Alembic) для всех сущностей
 - [~] Redis 7.2: настройка очередей задач (CAM), DLQ
-- [~] Object Storage: слой абстракции для presigned URL (YC)
-- [ ] Локальная разработка (опционально)
+  - [x] Очереди DXF/GCODE, DLQ — контракты и helper'ы
+  - [x] Воркёр (MVP) добавлен, типовые ошибки Pylance устранены
+  - [x] Запуск воркёра как сервиса и e2e смоук-тест статусов
+  - [x] Генерация DXF (ezdxf) и загрузка артефакта в S3 (MinIO), presigned URL
+- [x] Object Storage: слой абстракции для presigned URL (YC)
+- [x] Локальная разработка (опционально)
   - [x] docker-compose: `postgres`, `redis`, (опц.) `minio` для S3-совместимости
-- [ ] Секреты/конфиги через env (без ПДн и ключей в репозитории)
+  - Примечание: на Windows запускать `alembic upgrade` внутри контейнера `api` из-за сетевых особенностей
+- [x] Секреты/конфиги через env (без ПДн и ключей в репозитории)
   - [x] `.env.example` добавлен
 
 ## Этап 3 — Интеграция ИИ (текст и OCR)
-- [ ] Клиенты с ретраями/таймаутами/логами
-  - [ ] Yandex Vision OCR
-  - [ ] YandexGPT 5.1 Pro
-  - [ ] Yandex Embeddings
+- [~] Клиенты с ретраями/таймаутами/логами
+  - [x] Yandex Embeddings (POST /foundationModels/v1/textEmbedding)
+  - [x] YandexGPT 5 (POST /foundationModels/v1/completion)
+  - [x] Yandex Vision OCR (POST /ocr/v1/recognizeText)
   - [ ] GigaChat API (fallback)
-- [ ] Реализация `/api/v1/spec/extract`
-  - [ ] Обработка text/image/sketch
-  - [ ] Извлечение параметров + confidence
-  - [ ] Логирование промптов/ответов без ПДн
+- [x] Реализация `/api/v1/spec/extract`
+  - [x] Обработка text/image/sketch
+  - [x] Извлечение параметров + confidence
+  - [x] Логирование промптов/ответов без ПДн
+  - [x] Fallback для разработки без YC credentials
 - [ ] Интерактивная валидация после extract
   - [ ] `/api/v1/spec/validate` — генерация Validation/Items
   - [ ] Блок перехода до approve
@@ -64,6 +70,7 @@
 - [ ] Схема карточки фурнитуры (`sku`, `brand`, `type`, `params`, `compat`, `url`, `version`)
 - [ ] Импорт/нормализация каталогов (CSV/XLSX/JSON) + валидации
 - [ ] Эмбеддинги карточек (Yandex Embeddings)
+- [~] Эмбеддинги карточек (Yandex Embeddings)
 - [ ] Коллекция в YDB Vector Search (ANN) + индексы
 - [ ] k-NN поиск + фильтры (материал/толщина/тип/совместимость)
 - [ ] Оркестрация RAG
@@ -72,11 +79,19 @@
 - [ ] Интеграция в `/api/v1/hardware/select`
 
 ## Этап 5 — CAD/CAM (MVP)
-- [ ] DXF-генерация (ezdxf 1.4.2): панели, аннотации, слойность
+- [~] DXF-генерация (ezdxf 1.4.2): панели, аннотации, слойность
+  - [x] MVP: прямоугольник и выгрузка .dxf в Object Storage
+  - [ ] Расширить: слои, метаданные, единицы, аннотации
 - [ ] FreeCAD 1.0.x Path (GRBL): генерация G-code headless
 - [ ] Асинхронные CAM-задачи (Redis): статусы, повторы, ошибки
+  - [x] Статусы: Created→Processing→Completed/Failed
+  - [x] Артефакт DXF привязан к задаче (artifact_id)
+  - [ ] Повторы/бэкофф, счётчик попыток, idempotency key
 - [ ] Проверки CAM: размеры (мм), радиусы, оффсеты
 - [ ] Упаковка ZIP: DXF, NC, BOM, отчёты, метаданные
+
+Примечания:
+- Presigned URL выдаётся с host `minio:9000` (внутрисетевой). Для скачивания с хоста подменяйте на `localhost:9000` или прокиньте reverse-proxy/настройте MINIO_SERVER_URL.
 
 ## Этап 6 — Frontend (Next.js 15.5 / React 19)
 - [ ] Инициализация приложения `web/` (TS)
