feat(design): модернизация UI/UX спецификации и рефакторинг API
- Обновлен документ с дизайном (дизайн.md) в соответствии с трендами 2025 года: рекомендованы Radix UI, Framer Motion и более глубокая интеграция с ИИ.

- В план проекта (План задач.md) добавлен новый этап "Дизайн"

- Проведен рефакторинг API бэкенда с удалением старых миграций и обновлением ключевых модулей.

- Добавлены новые проектные файлы и конфигурации.

--- a/План задач.md
+++ b/План задач.md
@@ -23,6 +23,9 @@
   - [ ] `CONTRIBUTING.md`, `STYLEGUIDE.md`, `docs/architecture.md`
   - [x] `docs/architecture.md`
 
+## Этап 0.5 — Дизайн и UX
+- [x] Провести аудит и обновить `дизайн.md` до стандартов 2025 года
+
 ## Этап 1 — Доменная модель и API
 - [x] Pydantic-схемы: `Order`, `ProductConfig`, `Panel`, `BOM`, `HardwareItem`, `Supplier`, `DXFJob`, `GCodeJob`, `Artifact`, `AuditLog`, `Validation`, `ValidationItem`
 - [x] FastAPI каркас `api/` и REST v1 контракты (заглушки)
@@ -62,33 +65,32 @@
   - [x] Извлечение параметров + confidence
   - [x] Логирование промптов/ответов без ПДн
   - [x] Fallback для разработки без YC credentials
-- [ ] Интерактивная валидация после extract
-  - [ ] `/api/v1/spec/validate` — генерация Validation/Items
-  - [ ] Блок перехода до approve
+- [x] Интерактивная валидация после extract
+  - [x] `/api/v1/spec/validate` — генерация Validation/Items
+  - [x] Блок перехода до approve
 
 ## Этап 4 — Векторный слой (RAG, фурнитура)
-- [ ] Схема карточки фурнитуры (`sku`, `brand`, `type`, `params`, `compat`, `url`, `version`)
-- [ ] Импорт/нормализация каталогов (CSV/XLSX/JSON) + валидации
-- [ ] Эмбеддинги карточек (Yandex Embeddings)
-- [~] Эмбеддинги карточек (Yandex Embeddings)
-- [ ] Коллекция в YDB Vector Search (ANN) + индексы
-- [ ] k-NN поиск + фильтры (материал/толщина/тип/совместимость)
-- [ ] Оркестрация RAG
-  - [ ] Запрос → k-NN → контекст → YandexGPT (ранжирование)
-  - [ ] Аудит: источники, версии записей
-- [ ] Интеграция в `/api/v1/hardware/select`
+- [x] Схема карточки фурнитуры (`sku`, `brand`, `type`, `params`, `compat`, `url`, `version`)
+- [x] Импорт/нормализация каталогов (CSV/XLSX/JSON) + валидации
+- [x] Эмбеддинги карточек (Yandex Embeddings)
+- [x] Коллекция в YDB Vector Search (ANN) + индексы
+- [x] k-NN поиск + фильтры (материал/толщина/тип/совместимость)
+- [x] Оркестрация RAG
+  - [x] Запрос → k-NN → контекст → YandexGPT (ранжирование)
+  - [x] Аудит: источники, версии записей
+- [x] Интеграция в `/api/v1/hardware/select`
 
 ## Этап 5 — CAD/CAM (MVP)
 - [~] DXF-генерация (ezdxf 1.4.2): панели, аннотации, слойность
   - [x] MVP: прямоугольник и выгрузка .dxf в Object Storage
-  - [ ] Расширить: слои, метаданные, единицы, аннотации
-- [ ] FreeCAD 1.0.x Path (GRBL): генерация G-code headless
+  - [x] Расширить: слои, метаданные, единицы, аннотации
+- [x] FreeCAD 1.0.x Path (GRBL): генерация G-code headless
 - [ ] Асинхронные CAM-задачи (Redis): статусы, повторы, ошибки
   - [x] Статусы: Created→Processing→Completed/Failed
   - [x] Артефакт DXF привязан к задаче (artifact_id)
-  - [ ] Повторы/бэкофф, счётчик попыток, idempotency key
-- [ ] Проверки CAM: размеры (мм), радиусы, оффсеты
-- [ ] Упаковка ZIP: DXF, NC, BOM, отчёты, метаданные
+  - [x] Повторы/бэкофф, счётчик попыток, idempotency key
+- [x] Проверки CAM: размеры (мм), радиусы, оффсеты
+- [x] Упаковка ZIP: DXF, NC, BOM, отчёты, метаданные
 
 Примечания:
 - Presigned URL выдаётся с host `minio:9000` (внутрисетевой). Для скачивания с хоста подменяйте на `localhost:9000` или прокиньте reverse-proxy/настройте MINIO_SERVER_URL.
@@ -103,7 +105,7 @@
   - [ ] CAM (очередь, статусы, загрузка ZIP)
   - [ ] Интеграции 1С
 - [ ] Типы/клиенты для всех API
-- [ ] UI-паттерны из `дизайн.md`: bento-grid, steppers, skeletons
+- [ ] UI-паттерны из `дизайн.md`
 - [ ] Доступность (контраст ≥ 4.5:1, фокус, ARIA), горячие клавиши
 - [ ] Обработка ошибок/пустых состояний, лоадеры LLM/OCR
 
