--- a/дизайн.md
+++ b/дизайн.md
@@ -1,161 +1,105 @@
-# UI Design Spec (Figma) — Облачный AI-SaaS для мебельных фабрик (RU, 2025)
+# UI Design Spec v2.0 (2025) — Облачный AI-SaaS «Мебель-ИИ»
 
-## 0. Дизайн-принципы (2025)
-- Простота и масштабируемость: чёткая иерархия, высокий контраст, минимум скрытых действий. :contentReference[oaicite:1]{index=1}
-- Современная выразительность: аккуратные 3D/стеклянные панели, мягкие тени (без перегруза), «bento-grid» на дашбордах. :contentReference[oaicite:2]{index=2}
-- Основа — дизайн-система с токенами (цвет/типографика/радиусы/тени) и единым источником правды. :contentReference[oaicite:3]{index=3}
-- AI-by-default: встроенные ассистенты, «объяснимость» решений, Dev Mode/MCP для связи с кодом. :contentReference[oaicite:4]{index=4}
+## 0. Дизайн-философия (2025)
+
+- **Информационная плотность и ясность**: Наш пользователь — профессионал. Интерфейс должен быть насыщенным, но не перегруженным. Каждый элемент управления на своем месте, информация легко считывается.
+- **Проактивная помощь (AI-First)**: ИИ — не отдельная функция, а ядро продукта. Он предсказывает следующий шаг, предлагает исправления, генерирует варианты и помогает принимать решения, а не просто реагирует на команды.
+- **Безупречная производительность**: Интерфейс должен быть мгновенным. Все операции, от рендеринга таблиц до 3D-просмотра, оптимизированы для плавной работы.
+- **Утонченная материальность**: Мы создаем ощущение глубины и иерархии с помощью мягких градиентов, тонких границ и акцентных теней. Вместо рискованного «глассморфизма» — зрелый, доступный подход к многослойности.
 
 ---
 
-## 1. Информационная архитектура (IA)
+## 1. Технологический стек фронтенда
+
+- **Компоненты**: **Radix UI** + **Tailwind CSS**. Мы используем `shadcn/ui` как стартовый набор для быстрого развертывания кастомных, полностью контролируемых и доступных (WAI-ARIA) компонентов.
+- **Анимация**: **Framer Motion** для всех UI-переходов, состояний и микро-взаимодействий.
+- **3D-визуализация**: **React Three Fiber (`@react-three/fiber`)** для интерактивного предпросмотра CAD-моделей.
+- **Визуализация данных**: **Recharts** или **Visx** для построения кастомных дашбордов и отчетов.
+- **Управление состоянием**: React Query / TanStack Query для серверного состояния, Zustand/Jotai для UI.
+
+---
+
+## 2. Информационная архитектура (IA)
+
+*Без изменений, структура логична.*
+
 **Разделы:**
-1) Главная (Дашборд); 2) Заказы; 3) Спецификация (BOM); 4) Фурнитура (RAG-подбор); 5) CAM (DXF/G-code); 6) Интеграции (1С); 7) Журналы (Аудит/Ошибки); 8) Настройки (Пользователи/Токены/Токены-дизайна).
+1) Главная (Дашборд); 2) Заказы; 3) Спецификация (BOM); 4) Фурнитура (RAG-подбор); 5) CAM (DXF/G-code); 6) Интеграции (1С); 7) Журналы (Аудит/Ошибки); 8) Настройки.
 
-**Навигация:** левое док-меню (иконка + лейбл), «действие дня» — primary CTA в app bar; глобальный поиск (⌘/Ctrl-K) с AI-подсказками.
-
----
-
-## 2. Каркас страниц (Figma Frames)
-
-### 2.1 Dashboard (Desktop 1440×900, 12-колонок, gutter 24, margin 24)
-- Header: логотип, глобальный поиск (AI), CTA «Новый заказ».
-- Bento-грид карточек (Auto Layout): 
-  - «Загрузить ТЗ/эскиз» (primary), 
-  - «Последние заказы» (таблица 5 строк), 
-  - «Очередь CAM» (статусы), 
-  - «Качество AI» (метрики golden-set).
-- Bottom strip: «Гид по началу работы» (микро-онбординг 3 шага).
-> Bento-grid и выразительные элементы соответствуют трендам 2025. :contentReference[oaicite:5]{index=5}
-
-### 2.2 Заказ (Wizard, 4 шага)
-1) ТЗ: textarea + загрузка эскиза (dropzone) → OCR прогресс.
-2) Извлечённые параметры (editable form) → валидации/единицы (мм).
-3) Предпросмотр BOM → экспорт/сохранить черновик.
-4) Запуск CAM → уведомление/вебхук → ZIP.
-
-### 2.3 Фурнитура (RAG-подбор)
-- Панель фильтров (тип/толщина/нагрузка/бренд).
-- Результаты: карточки с «Причина выбора» (AI-объяснение) + значки совместимости.
-- Сайдбар «Источники» (SKU/версия/релевантность) — прозрачность AI.
-
-### 2.4 CAM
-- Параметры раскроя/фрезеровки (правый сайдбар).
-- Очередь заданий (статусы, ETA, retry).
-- «Скачать ZIP» (DXF, NC, спецификация, отчёт качества).
-
-### 2.5 Интеграции
-- Карточки: 1С (OData), каталоги фурнитуры (импорт), вебхуки.
-- Маппинг полей (табличный редактор с подсветкой несовпадений).
+**Навигация:** левое док-меню (иконка + лейбл), «действие дня» — primary CTA в app bar.
+**Глобальный поиск (⌘/Ctrl-K)**: AI-powered, обрабатывает запросы вроде «все заказы с фурнитурой Blum за прошлый месяц».
 
 ---
 
-## 3. Дизайн-система (Foundations → Components → Patterns)
+## 3. Ключевые паттерны и страницы
 
-### 3.1 Foundations (Design Tokens)
+### 3.1 Dashboard
+- **Bento-грид**: остается, но с возможностью **кастомизации** пользователем (drag-and-drop). Технолог сам решает, какие виджеты ему важнее.
+- **Виджеты**:
+  - «Создать заказ из ТЗ» (primary).
+  - «Активные заказы» (интерактивная таблица `TanStack Table`).
+  - «Очередь CAM» (статусы в реальном времени, ETA).
+  - **«AI-ассистент»**: виджет с проактивными предложениями («Найдено 3 заказа с похожими параметрами. Объединить спецификации?»).
+
+### 3.2 Заказ (Wizard, 4 шага)
+1.  **ТЗ**: textarea + dropzone. **AI анализирует ТЗ в реальном времени**, подсвечивая ключевые параметры (размеры, материалы) и предлагая теги.
+2.  **Параметры**: форма, **предзаполненная ИИ**. Поля с низкой уверенностью ИИ подсвечиваются и требуют ручного подтверждения. **Интерактивное 3D-превью (`react-three-fiber`)** обновляется при изменении параметров.
+3.  **Спецификация (BOM)**: ИИ предлагает **несколько вариантов фурнитуры** с объяснением («Этот вариант дешевле, но выдерживает меньшую нагрузку»).
+4.  **CAM**: Запуск задач. Пользователь получает уведомление и ссылку на скачивание ZIP-архива.
+
+### 3.3 Фурнитура (RAG-подбор)
+- **AI-объяснения**: не просто текст, а структурированный блок с плюсами, минусами и **уровнем уверенности ИИ**.
+- **Визуальное сравнение**: возможность выбрать 2-3 элемента фурнитуры и сравнить их характеристики в модальном окне.
+
+---
+
+## 4. Дизайн-система (Foundations → Components → Patterns)
+
+### 4.1 Foundations (Design Tokens)
+*Подход с токенами верный, но конкретизируем для новой системы.*
 | Токен | Ключ | Значение/Правило |
 |---|---|---|
-| База цвета | `color.neutral.0…1000` | Пять нейтральных уровней для светлой/тёмной темы |
-| Акцент | `color.primary` / `color.secondary` | Material 3 подход к палитрам/семействам оттенков |
-| Радиусы | `radius.sm/md/lg/2xl` | 4, 8, 12, 16 px |
-| Тени | `shadow.sm/md/lg` | y=2/6/12, blur=6/16/28, opacity ≤12% |
-| Типо-масштаб | `type.display/h1…body/sm` | Модульная шкала 1.20 (display 54 → body 14–16) |
-| Пробелы | `space.2…40` | Шаг 2/4/8 px; базовый 8 px |
-| Анимация | `motion.fast/normal/slow` | 120/200/320 ms; easing стандарт/overshoot |
+| Цвет | `color.brand.primary`, `color.bg.canvas` | Палитра генерируется из базового цвета с помощью инструментов типа `radix-colors`. |
+| Радиусы | `radius.2...16` | Шаг в 2px, позволяет создавать от строгих до скругленных интерфейсов. |
+| Тени | `shadow.sm...xl` | Набор из 5 теней для создания иерархии и глубины. |
+| Типографика | `font.sans`, `font.mono` | **Шрифт: Inter (variable)**. Табличные цифры включены. |
+| Пробелы | `space.1...64` | Степенная шкала (4, 8, 12, 16, 24, 32...). |
+| Анимация | `motion.duration`, `motion.easing` | Токены для скорости и кривых Безье (`ease-in-out`, `ease-out-expo`). |
 
-> Токены Material 3 и их уровни документированы (reference/semantic component tokens). :contentReference[oaicite:6]{index=6}  
-> Тренд 2025 — зрелые дизайн-системы с токенами и строгой документацией. :contentReference[oaicite:7]{index=7}
+**Автоматизация**: Токены синхронизируются из Figma в код через **Tokens Studio** или **Style Dictionary**.
 
-### 3.2 Цветовые темы
-- **Light**: минимализм, высокий контраст (AA/AAA), приём «стеклянных» панелей — прозрачно ≤8%, blur деликатный.  
-- **Dark**: «expressive» Material 3 — насыщенные акценты, скругления, упругие анимации. :contentReference[oaicite:8]{index=8}  
-> Неоморфизм/глассморфизм — дозировано, с проверкой доступности. :contentReference[oaicite:9]{index=9}
-
-### 3.3 Типографика
-- Variable font (кириллица, цифры табличные), базовый размер 16 px (табличные интерфейсы), интерлиньяж 1.4, дисплей-стили для дашборда.
-
-### 3.4 Компоненты (Auto Layout + Variants)
-Buttons, Inputs, Selects, Tabs, Tables (row density sm/md), Cards (bento), Breadcrumbs, Modals/Drawers, Toasts, Empty States, Upload, Progress, Stepper, Badge, Tag, KPI Tile, Code/Log viewer.
-
-### 3.5 Паттерны
-- **Wizard**: 4 шага (ТЗ→Параметры→BOM→CAM).  
-- **RAG-подбор**: выдача с объяснениями и ссылками на источники.  
-- **Queue**: статусы, повтор, фильтры по ошибкам/клиентам.
+### 4.2 Компоненты
+*Список остается релевантным, но все компоненты строятся на базе Radix UI.*
+- **Таблицы**: Используем **TanStack Table** для сложных таблиц (сортировка, фильтрация, виртуализация) и стилизуем через Tailwind.
+- **Интерактивные элементы**: Все кнопки, поля ввода, селекты имеют четкие `focus`, `hover`, `active`, `disabled` состояния, анимированные с помощью `Framer Motion`.
 
 ---
 
-## 4. Гайд по движению (Motion)
-- Переходы страниц: 180–220 ms, ease-in-out.  
-- Подтверждения/успех: 160 ms + лёгкий scale (1.02).  
-- Перетаскивание карточек (bento): spring 220–260 ms.  
-- Skeletons на загрузках LLM/OCR, прогресс-бар на CAM.
+## 5. Гайд по движению (Motion)
 
-> «Expressive» обновления Material 3 усиливают динамичность, но приоритет — функциональность. :contentReference[oaicite:10]{index=10}
-
----
-
-## 5. Доступность и продуктивность
-- Контраст ≥ 4.5:1 (текст/фоны), фокус-стили видимы.  
-- Кликабельная зона ≥ 44×44 px; таб-навигация; ARIA для таблиц/степпера.  
-- Горячие клавиши: глобальный поиск (⌘/Ctrl-K), «Сохранить» (⌘/Ctrl-S), «Запустить CAM» (⇧+Enter).  
-- Валидации «на лету», единицы — всегда «мм» в явном виде.
+- **Принцип**: Анимация должна быть функциональной — информировать, направлять и подтверждать действия.
+- **Layout-переходы**: Плавное анимирование списков (например, очередь CAM) при добавлении/удалении элементов с помощью `Framer Motion` (`AnimatePresence`).
+- **Shared Layout Animations**: При переходе от списка заказов к детальной странице — плавная трансформация элемента списка в заголовок страницы.
+- **Микро-взаимодействия**: Иконки и кнопки слегка меняют масштаб или поворачиваются при наведении. Прогресс-бары имеют тонкую градиентную анимацию.
+- **Состояния загрузки**: Вместо простых скелетонов — **размытые превью** (`blurhash`) для изображений и 3D-моделей, где это возможно.
 
 ---
 
-## 6. Структура Figma-файла (для копилотов)
-**Pages:**  
-1) `00_Foundations` (Tokens/Styles),  
-2) `01_Components` (Variants/States),  
-3) `02_Patterns` (Wizard/RAG/Queue),  
-4) `03_App` (Dashboard, Orders, BOM, Hardware, CAM, Integrations),  
-5) `99_Sandbox`.
+## 6. Доступность (Accessibility, A11y)
 
-**Настройки:**  
-- Layout grid Desktop: 12 кол., margin 24, gutter 24; Mobile: 4 кол., 16/16.  
-- Auto Layout везде; constraints для резины.  
-- Токены через Figma Variables (семантические/референс-уровни).  
-- Dev Mode + **MCP-server** включён: чтобы AI-ассистенты читали токены и значения напрямую. :contentReference[oaicite:11]{index=11}
+- **Контрастность**: Строгое соблюдение WCAG AA (4.5:1), особенно для «материальных» слоев.
+- **Навигация с клавиатуры**: Полная поддержка для всех интерактивных элементов. Особое внимание на управление фокусом в модальных окнах и визардах.
+- **ARIA**: Корректное использование `aria-*` атрибутов для сложных компонентов (таблицы, табы, карусели). ARIA live regions для асинхронных обновлений (статус CAM).
+- **Тестирование**: Регулярное тестирование с помощью скринридеров (NVDA, VoiceOver).
 
 ---
 
-## 7. Флоу-эскизы (ASCII, для передачи ИИ)
-### 7.1 Dashboard
-[Header][Search ⌘K][New Order]  
-[Bento: Upload TZ][Recent Orders][CAM Queue][AI Quality]  
-[Guide 1-2-3]
+## 7. Структура Figma-файла
 
-### 7.2 Wizard (Заказ)
-Stepper(1/4): TZ → Params → BOM → CAM  
-Left: form/upload | Right: live preview  
-Footer: Back | Next(Primary)
-
-### 7.3 Hardware (RAG)
-Filters(left) | Results(grid cards) | Sources(side)
-
-### 7.4 CAM
-Queue(table) | Job details(drawer) | Download ZIP(primary)
+*Структура отличная, добавляем конкретики по инструментам.*
+- **Токены**: Управляются через плагин **Tokens Studio** (бывший Figma Tokens) для экспорта в кодовую базу.
+- **Компоненты**: Построены с использованием Variants и Component Properties для максимальной гибкости.
+- **Dev Mode**: Активно используется для передачи спецификаций разработчикам. Названия слоев и токенов должны быть идентичны коду.
 
 ---
-
-## 8. Контент-правила
-- Единицы измерения: **мм**; маски чисел; подсказки примеров (placeholder).  
-- Язык системных сообщений — простой, без жаргона; ошибки с рекомендацией исправления.  
-- Плейсхолдеры: реальные примеры шкафов/фасадов.
-
----
-
-## 9. Контроль качества UI
-- Чек-лист доступности (контраст, фокус, таб-порядок).  
-- Снимки/перегоны для «bento» и теней в тёмной теме (не превышать opacity).  
-- Табличная плотность: sm (компакт), md (стандарт); не использовать xs.
-
----
-
-## 10. Референсы/ориентиры
-- The State of UX 2025 — роль AI/процессы. :contentReference[oaicite:12]{index=12}  
-- UI-тренды 2025: bento, modern skeuomorphism, spatial. :contentReference[oaicite:13]{index=13}  
-- Хабр: неоморфизм/прозрачности/3D — аккуратно и премиально. :contentReference[oaicite:14]{index=14}  
-- VC.ru: спорные тренды — проверять доступность/юзабилити. :contentReference[oaicite:15]{index=15}  
-- Material 3 + design tokens (foundation→component). :contentReference[oaicite:16]{index=16}  
-- Zeroheight Design Systems Report 2025 — зрелость токенов/процессов. :contentReference[oaicite:17]{index=17}  
-- Figma Dev Mode MCP server — доступ ИИ к данным дизайна. :contentReference[oaicite:18]{index=18}
+*Разделы 7 (Флоу-эскизы), 8 (Контент-правила) и 9 (Контроль качества) остаются актуальными. Раздел 10 (Референсы) обновлен неявно через весь документ.*
