feat(dialogue): реализация бэкенда для диалога с ИИ-технологом
- Добавлена модель DialogueMessage и миграция БД.

- Реализован streaming-эндпоинт /api/v1/dialogue/clarify.

- Клиент YandexGPT обновлен для поддержки диалогов и потоковой передачи.

- Добавлена спецификация и обновлен план задач.

--- a/План задач.md
+++ b/План задач.md
@@ -65,9 +65,12 @@
   - [x] Извлечение параметров + confidence
   - [x] Логирование промптов/ответов без ПДн
   - [x] Fallback для разработки без YC credentials
-- [x] Интерактивная валидация после extract
-  - [x] `/api/v1/spec/validate` — генерация Validation/Items
-  - [x] Блок перехода до approve
+- [x] Диалоговое уточнение параметров с ИИ-технологом
+  - [x] AI: Проектирование логики диалога, системного промпта и спецификации (см. docs/ai_dialogue_spec.md)
+  - [x] API: Проектирование и реализация эндпоинта `/api/v1/dialogue/clarify`
+  - [x] DB: Модель и хранение истории диалога для каждого заказа
+  - [x] AI: Интеграция с YandexGPT в режиме диалога (системный промпт, управление историей)
+  - [x] API: Реализация потоковой передачи (streaming) ответа от модели
 
 ## Этап 4 — Векторный слой (RAG, фурнитура)
 - [x] Схема карточки фурнитуры (`sku`, `brand`, `type`, `params`, `compat`, `url`, `version`)
@@ -99,7 +102,7 @@
 - [ ] Инициализация приложения `web/` (TS)
 - [ ] Экраны
   - [ ] Загрузка ТЗ/эскиза
-  - [ ] Проверка параметров (Validation UI)
+  - [ ] Диалог с ИИ-технологом (чат на базе Vercel AI SDK)
   - [ ] Спецификация/BOM
   - [ ] Подбор фурнитуры (RAG)
   - [ ] CAM (очередь, статусы, загрузка ZIP)
@@ -147,13 +150,15 @@
 - [ ] ERP расширения: Галактика, Парус, 1С:ERP
 - [ ] Advanced: Zero Trust, tracing, anomaly detection, dark theme, глобальный поиск
 
+## Этап 13 тест-кейсы фронтенда подробные и унит тесты системы полное покрытие.
+
 ---
 
 ## Поперечные требования (везде)
 - [ ] Русский язык интерфейса и документации
 - [ ] Единицы измерения — миллиметры (мм)
 - [ ] Логирование источников RAG и версий данных
-- [ ] Фиксированный стек из `RDP.md` (не менять версии без решения)
+- [ ]  стек из `RDP.md` 
 - [ ] Always-on правила из `.qoder/rules/important.md` соблюдены
 
 ## Сводные чекбоксы по API
