--- a/дизайн.md
+++ b/дизайн.md
@@ -42,14 +42,21 @@
   - **«AI-ассистент»**: виджет с проактивными предложениями («Найдено 3 заказа с похожими параметрами. Объединить спецификации?»).
 
 ### 3.2 Заказ (Wizard, 4 шага)
-1.  **ТЗ**: textarea + dropzone. **AI анализирует ТЗ в реальном времени**, подсвечивая ключевые параметры (размеры, материалы) и предлагая теги.
-2.  **Параметры**: форма, **предзаполненная ИИ**. Поля с низкой уверенностью ИИ подсвечиваются и требуют ручного подтверждения. **Интерактивное 3D-превью (`react-three-fiber`)** обновляется при изменении параметров.
-3.  **Спецификация (BOM)**: ИИ предлагает **несколько вариантов фурнитуры** с объяснением («Этот вариант дешевле, но выдерживает меньшую нагрузку»).
-4.  **CAM**: Запуск задач. Пользователь получает уведомление и ссылку на скачивание ZIP-архива.
+1.  **ТЗ**: Загрузка ТЗ (текст, эскиз). AI в реальном времени анализирует входные данные.
+2.  **Диалог и валидация**: Вместо статической формы — **диалоговый интерфейс** с ИИ-технологом для уточнения и финализации параметров. (См. паттерн 3.4)
+3.  **Спецификация (BOM)**: ИИ предлагает варианты фурнитуры на основе утвержденных параметров.
+4.  **CAM**: Запуск генерации файлов для станков.
 
 ### 3.3 Фурнитура (RAG-подбор)
 - **AI-объяснения**: не просто текст, а структурированный блок с плюсами, минусами и **уровнем уверенности ИИ**.
 - **Визуальное сравнение**: возможность выбрать 2-3 элемента фурнитуры и сравнить их характеристики в модальном окне.
+
+### 3.4 Паттерн: Диалог с ИИ-технологом
+Это ключевой этап взаимодействия, заменяющий ручную проверку.
+- **Интерфейс**: Чат-компонент, построенный с помощью **Vercel AI SDK**. Ответы от ИИ появляются в потоковом режиме.
+- **Системная роль ИИ**: "Ты — ведущий технолог мебельного производства. Твоя задача — проанализировать извлеченные из ТЗ параметры и задать пользователю уточняющие вопросы, чтобы исключить ошибки. Спрашивай про материалы, кромку, присадки, фурнитуру, если видишь неполные или неоднозначные данные. Веди диалог до тех пор, пока все параметры не будут финализированы."
+- **Интерактивные элементы**: ИИ может отправлять не только текст, но и кнопки с вариантами ответов («Да, использовать кромку 2мм», «Нет, указать другую»), чтобы ускорить процесс согласования.
+- **Завершение**: Диалог завершается, когда ИИ собрал все необходимые данные, или по команде пользователя. Финальные, согласованные параметры становятся основой для следующих этапов.
 
 ---
 
