Доработки  задач и планов движения

--- a/План задач.md
+++ b/План задач.md
@@ -98,6 +98,20 @@
 Примечания:
 - Presigned URL выдаётся с host `minio:9000` (внутрисетевой). Для скачивания с хоста подменяйте на `localhost:9000` или прокиньте reverse-proxy/настройте MINIO_SERVER_URL.
 
+## Этап 5.5 — Публичный сайт, аутентификация и платежи
+- [ ] **Требование**: Все публичные страницы, формы и уведомления должны быть полностью на русском языке.
+- [ ] **Публичный сайт**:
+  - [ ] Разработка Лендинга (главной страницы).
+  - [ ] Разработка страницы "Тарифы".
+- [ ] **Аутентификация**:
+  - [ ] Реализация UI для форм регистрации, входа и восстановления пароля.
+  - [ ] Реализация API-эндпоинтов и логики для управления пользователями.
+- [ ] **Платежи и подписки**:
+  - [ ] Выбор и интеграция платежного шлюза (например, ЮKassa, Robokassa).
+  - [ ] Реализация логики управления тарифами и подписками.
+- [ ] **Настройки пользователя**:
+  - [ ] UI и API для раздела "Настройки", где пользователь может управлять своим профилем и паролем.
+
 ## Этап 6 — Frontend (Next.js 15.5 / React 19)
 - [ ] Инициализация приложения `web/` (TS)
 - [ ] Экраны
@@ -128,6 +142,10 @@
 - [ ] Presigned URL TTL ≤ 15 мин; раздельные бакеты
 - [ ] Аудит: промпты/ответы (без ПДн), источники RAG, доступ к файлам
 - [ ] Роли: администратор, технолог, дизайнер (авторизация/права)
+- [ ] Реализовать панель администратора на базе SQLAdmin
+  - [ ] Интеграция SQLAdmin в FastAPI приложение (эндпоинт /admin)
+  - [ ] Настройка аутентификации для доступа только администраторам
+  - [ ] Регистрация ключевых моделей (User, Order, HardwareItem) для управления
 
 ## Этап 10 — Наблюдаемость
 - [ ] YC Cloud Logging интеграция (структурированные логи)
