--- a/дизайн.md
+++ b/дизайн.md
@@ -24,7 +24,7 @@
 *Без изменений, структура логична.*
 
 **Разделы:**
-1) Главная (Дашборд); 2) Заказы; 3) Спецификация (BOM); 4) Фурнитура (RAG-подбор); 5) CAM (DXF/G-code); 6) Интеграции (1С); 7) Журналы (Аудит/Ошибки); 8) Настройки.
+1) Главная (Дашборд); 2) Заказы; 3) Спецификация (BOM); 4) Фурнитура (RAG-подбор); 5) CAM (DXF/G-code); 6) Интеграции (1С); 7) История заказов; 8) Аудит (для администраторов); 9) Настройки.
 
 **Навигация:** левое док-меню (иконка + лейбл), «действие дня» — primary CTA в app bar.
 **Глобальный поиск (⌘/Ctrl-K)**: AI-powered, обрабатывает запросы вроде «все заказы с фурнитурой Blum за прошлый месяц».
@@ -32,6 +32,11 @@
 ---
 
 ## 3. Ключевые паттерны и страницы
+
+### 3.5 История и Аудит (по ролям)
+Вместо прямого отображения технических логов, реализуется двухуровневая система:
+- **Для технолога**: Внутри карточки каждого заказа будет доступна контекстная «История заказа» — человекочитаемый список ключевых событий (загрузка ТЗ, согласование параметров, запуск CAM и т.д.). Это обеспечивает прозрачность без перегрузки интерфейса.
+- **Для администратора**: Предусмотрен отдельный раздел «Аудит», доступный только пользователям с соответствующими правами. Он будет содержать детальные журналы действий, системные события и ошибки для полноценного контроля и администрирования платформы.
 
 ### 3.1 Dashboard
 - **Bento-грид**: остается, но с возможностью **кастомизации** пользователем (drag-and-drop). Технолог сам решает, какие виджеты ему важнее.
@@ -57,6 +62,15 @@
 - **Системная роль ИИ**: "Ты — ведущий технолог мебельного производства. Твоя задача — проанализировать извлеченные из ТЗ параметры и задать пользователю уточняющие вопросы, чтобы исключить ошибки. Спрашивай про материалы, кромку, присадки, фурнитуру, если видишь неполные или неоднозначные данные. Веди диалог до тех пор, пока все параметры не будут финализированы."
 - **Интерактивные элементы**: ИИ может отправлять не только текст, но и кнопки с вариантами ответов («Да, использовать кромку 2мм», «Нет, указать другую»), чтобы ускорить процесс согласования.
 - **Завершение**: Диалог завершается, когда ИИ собрал все необходимые данные, или по команде пользователя. Финальные, согласованные параметры становятся основой для следующих этапов.
+
+### 3.6 Публичные страницы и онбординг
+- **Лендинг**: Главная страница продукта, описывающая его ценность, возможности и преимущества. Должна содержать понятные CTA (Call to Action) для регистрации или просмотра тарифов.
+- **Страница тарифов**: Ясное и наглядное представление тарифных планов, их стоимости и входящих в них лимитов/функций.
+- **Страницы аутентификации**: Современные и минималистичные формы для входа, регистрации и восстановления пароля. Предпочтительно реализовать в виде модальных окон поверх лендинга или на отдельных страницах.
+
+### 3.7 Настройки пользователя
+- **Доступ**: Меню настроек должно открываться по клику на email/аватар пользователя в правом верхнем углу приложения.
+- **Реализация**: В виде выпадающего меню (Dropdown Menu) или отдельной страницы, включающей управление профилем, сменой пароля и настройками уведомлений.
 
 ---
 
@@ -107,6 +121,41 @@
 - **Токены**: Управляются через плагин **Tokens Studio** (бывший Figma Tokens) для экспорта в кодовую базу.
 - **Компоненты**: Построены с использованием Variants и Component Properties для максимальной гибкости.
 - **Dev Mode**: Активно используется для передачи спецификаций разработчикам. Названия слоев и токенов должны быть идентичны коду.
+
+---
+
+## 8. Референсы и Вдохновение
+
+Этот раздел закрепляет ключевые внешние референсы, которые формируют наше видение продукта и подтверждают правильность выбранных дизайн-паттернов.
+
+### 8.1 Эталоны B2B SaaS
+- **Linear.app**: "Северная звезда" нашего UX. Образец скорости, минимализма и эффективности. Мы стремимся к такой же отточенности в каждом взаимодействии.
+- **Vercel.com**: Пример чистого, информативного дашборда для сложного технического продукта. Отличный референс для нашего bento-грида.
+- **Stripe.com**: Эталон баланса между безупречной эстетикой (анимации, градиенты) и абсолютной функциональностью в B2B-сегменте.
+
+### 8.2 Аналоги в производственном и CAD/CAM ПО
+- **Onshape.com** и **Fusion 360 (Web)**: Прямые референсы для интерфейса работы с 3D-моделями, панелей инструментов и инспекторов свойств. Их опыт в облачном CAD бесценен.
+- **Tulip.co** и **Katana MRP**: Современные MRP/MES-платформы. У них стоит подсмотреть организацию дашбордов с производственными KPI, управление очередью заказов и работу с табличными данными.
+
+### 8.3 Взаимодействие с ИИ
+- **Notion AI / Figma AI**: Примеры того, как ИИ-функции органично встраиваются в основной рабочий процесс, а не существуют в отдельном окне.
+- **RunwayML**: Референс для генеративных интерфейсов, где пользователь управляет сложным процессом через структурированные формы и настройки, сохраняя контроль.
+
+### 8.4 Визуальные и трендовые ориентиры
+- **Awwwards.com**: Постоянный источник вдохновения для поиска смелых визуальных решений, продвинутой анимации и инновационных UI-паттернов.
+- **Официальный сайт Material 3**: Первоисточник для всех компонентов и принципов, особенно в части динамических цветов и выразительного дизайна.
+
+---
+
+## 9. Администрирование и Наблюдение
+
+Для задач администрирования, управления данными (пользователи, заказы, справочники) и базового мониторинга вместо создания отдельного фронтенд-приложения используется подход "Admin-as-a-library".
+
+- **Технология**: **SQLAdmin** для FastAPI.
+- **Принцип работы**: Библиотека автоматически генерирует полнофункциональный и защищенный веб-интерфейс на основе моделей данных SQLAlchemy.
+- **Доступ**: Панель администратора будет доступна по эндпоинту `/admin` в основном `api` приложении и защищена схемой аутентификации, доступной только пользователям с ролью "администратор".
+
+Этот подход позволяет получить мощный инструмент управления с минимальными трудозатратами на разработку и поддержку.
 
 ---
 *Разделы 7 (Флоу-эскизы), 8 (Контент-правила) и 9 (Контроль качества) остаются актуальными. Раздел 10 (Референсы) обновлен неявно через весь документ.*
